# Client

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  pyproject.toml  requirements.txt  tailwind.config.js
src/: .env.example  app.py  client.py  config.py  create_app.py
src/ai/: anthropicClient.py
src/blueprints/: health.py  home.py
src/templates/: base.html  welcome.html
