[project]
name = "tingz-client"
version = "0.1.0"
description = "Frontend for the Tingz Collosseum hackathon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.54.0",
    "flask[async]>=3.1.0",
    "markdown>=3.8",
    "mcp[cli]>=1.8.1",
    "python-dotenv>=1.1.0",
]
