[project]
name = "tingz-client"
version = "0.1.0"
description = "Frontend for the Tingz Collosseum hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.54.0",
    "langchain-mcp-adapters>=0.1.7",
    "langchain[anthropic,openai]>=0.3.26",
    "langgraph>=0.4.8",
    "markdown>=3.8",
    "mcp[cli]>=1.8.1",
    "python-dotenv>=1.1.0",
    "quart>=0.20.0",
]
